style.css
/* ... */
a[data-lightbox]:hover img {
  opacity: 0.6;
  -webkit-animation-fill-mode: none;
  animation-fill-mode: none;
}

#lightbox-modal {
  display: flex;
  align-items: center;
}

#lightbox-modal .modal-dialog {
  width: 90%;
  max-width: 900px;
  margin: 0 auto 0;
}

#lightbox-modal .modal-dialog img {
  max-height: 90vh;
  margin: 0 auto;
}

.lightbox-caption {
  padding: 20px;
  color: #fff;
  background: rgba(0, 0, 0, 0.5);
  position: absolute;
  left: 15px;
  right: 15px;
  bottom: 5px;
}

.close-lightbox {
  color: #fff;
  font-size: 30px;
  position: absolute;
  top: 20px;
  right: 20px;
  z-index: 20;
  background: rgba(0, 0, 0, 0.5);
  border: none;
  line-height: 30px;
  padding: 0 9px 5px;
  opacity: 0.3;
}

.close-lightbox:hover,
.next-lightbox:hover,
.prev-lightbox:hover {
  opacity: 1;
  color: #fff;
}

.next-lightbox,
.prev-lightbox {
  font-size: 20px;
  color: rgba(255, 255, 255, 0.9);
  background: rgba(0, 0, 0, 0.5);
  transition: all 0.2s ease-in-out;
  position: absolute;
  top: 45%;
  z-index: 1;
  opacity: 0.4;
}

.next-lightbox {
  padding: 6px 8px 1px 13px;
  right: 25px;
}

.prev-lightbox {
  padding: 6px 13px 1px 10px;
  left: 25px;
}

.snapshot-lb .modal-body {
  padding-bottom: 45px;
}

.snapshot-lb .lightbox-caption {
  padding: 0;
  color: rgba(0, 0, 0, 0.5);
  background: none;
}

h1,
h2,
h3,
label,
.btn,
a {
  font-family: "helvetica";
  font-weight: 400;
  color: black;
}

.bloc-lg p {
  color: #000000;
  font-size: 16px;
}

.container {
  max-width: 1000px;
}

.hero-bloc-text {
  font-size: 38px;
}


.statement-bloc-text {
  line-height: 26px;
  font-style: italic;
  font-size: 20px;
  text-align: center;
  font-weight: lighter;
  max-width: 520px;
  margin: auto auto auto auto;
}

p {
  font-size: 16px;
  color: #333333;
}

.text-center .citation {
  width: 80%;
  text-align: center;
  font-size: 22px;
  font-style: italic;
  margin: auto;
}

.text-center .auteur {
  width: 80%;
  text-align: center;
  font-size: 18px;
  margin: auto;
}

.tight-width-whitespace {
  width: 80%;
  margin: auto;
}

.black-background .tc-white {
  font-size: 25px;
}

.black-background .white {
  font-size: 18px;
}

.cta-hero {
  margin-top: 22px;
  color: #ffffff !important;
  text-transform: uppercase;
  padding: 12px 28px 12px 28px;
  font-size: 16px;
  font-weight: 700;
}

.social {
  max-width: 400px;
  margin: auto auto auto auto;
}

h2 {
  font-size: 22px;
  line-height: 1.4em;
  text-align: center;
}

h3 {
  width: 50%;
  text-align: center;
  font-size: 22px;
  margin: auto;
}

h4 {
  font-size: 15px;
  text-transform: uppercase;
  font-weight: 700;
  color: #333333 !important;
}

.med-width-whitespace {
  max-width: 800px;
  margin: auto auto auto auto;
  box-shadow: 0px 0px 0px #000000;
}


 h5{
    font-weight: 600;
    text-align: center;
    color: white;
    font-size: 30px;
}



.icons {
  margin-bottom: 14px;
  margin-top: 24px;
}

.white {
  color: #ffffff !important;
}

.portfolio-thumb {
  margin-bottom: 24px;
  width: 100%;
  margin-top: 30px;
}

.portfolio-row {
  margin-bottom: 44px;
  margin-top: 50px;
}

.avatar {
  box-shadow: 0px 4px 9px rgba(0, 0, 0, 0.3);
}

.black-background {
  background-color: #39333c;
  padding: 40px 40px 40px 40px;
}

.bold-link {
  font-weight: 900;
  text-decoration: underline !important;
}

.bgc-white {
  background-color: #ffffff;
}
 
.bgc-dark-slate-blue {
  background-color: #364577;
} 

.bgc-atomic-tangerine {
  background-color:#f7814b;
}

.tc-white {
  color: white !important ;
  font-weight: bold;
  font-size: 30px;
}

.text-center.tc-orange{
 font-size: 20px;
 font-weight: bold;
 color: #f7814b;  
}



.btn-atomic-tangerine {
  background: #f7814b;
  color: #ffffff !important;
}

.btn-atomic-tangerine:hover {
  background: #c27956 !important;
  color: #ffffff !important;
}

.ltc-white {
  color: #ffffff !important;
}

.ltc-white:hover {
  color: #cccccc !important;
}

.ltc-atomic-tangerine {
  color: #f7814b !important;
}

.ltc-atomic-tangerine:hover {
  color: #c27956 !important;
}

.icon-dark-slate-blue {
  color: #364577 !important;
  border-color: #364577 !important;
}



.bg-banniere {
  background-image: url("img/agence-la-panthere.webp");
}

.bg-presentation {
  background-image: url("img/image-de-presentation.webp");
}

.fa {
  color: rgba(255, 255, 255, 0.6);
}


footer .white {
  font-size: 20px;
}



@media (max-width: 1024px) {
  .bloc {
    padding-left: 20px;
    padding-right: 20px;
  }
  .bloc.full-width-bloc,
  .bloc-tile-2.full-width-bloc .container,
  .bloc-tile-3.full-width-bloc .container,
  .bloc-tile-4.full-width-bloc .container {
    padding-left: 0;
    padding-right: 0;
  }
}

@media (max-width: 992px) and (min-width: 768px) {
  .navbar .nav {
    max-width: 80%;
  }
  .nav-center.navbar .nav {
    max-width: 100%;
  }
}

@media only screen and (min-device-width: 768px) and (max-device-width: 1024px) and (orientation: landscape) {
  .b-parallax {
    background-attachment: scroll;
  }
}

@media only screen and (min-device-width: 1024px) and (max-device-width: 1366px) and (-webkit-min-device-pixel-ratio: 1.5) {
  .b-parallax {
    background-attachment: scroll;
  }
}

@media (max-width: 991px) {
  .container {
    width: 100%;
  }
  .b-parallax {
    background-attachment: scroll;
  }
  .page-container,
  #hero-bloc {
    overflow-x: hidden;
    position: relative;
  }
  .bloc {
    padding-left: constant(safe-area-inset-left);
    padding-right: constant(safe-area-inset-right);
  }
  .bloc-group,
  .bloc-group .bloc {
    display: block;
    width: 100%;
  }
  .bloc-fill-screen .fill-bloc-top-edge,
  .bloc-fill-screen .fill-bloc-bottom-edge {
    padding: 0 20px;
    padding-left: constant(safe-area-inset-left);
    padding-right: constant(safe-area-inset-right);
  }
}
/* ... */

